# asr-tools

./: .gitignore  README.md  asr_evaluation.py  get_dataset_stats.py  pyproject.toml  requirements.txt
src/asr_lib/config/: eval_config.py
src/asr_lib/config/eval/: complete_eval.yaml  template.yaml  test.yaml  test_complete.yaml
src/asr_lib/config/logger/: default.yaml
src/asr_lib/config/user/: template.ini
src/asr_lib/data/: base_dataset.py  dataset.py
src/asr_lib/metrics/: __init__.py  base_metric.py  cer.py  mer.py  wer.py  wil.py
src/asr_lib/models/: __init__.py  base_asr.py  meta_seamless_asr.py  meta_w2v_asr.py  nvidia_nemo_asr.py  whisper_asr_local.py
src/asr_lib/pipeline/: __init__.py  eval_pipeline.py
src/asr_lib/pipeline/functional/: preprocessing.py
src/asr_lib/stats/: dataset_stats.py
src/asr_lib/utils/: __init__.py  eval_utils.py  utils.py  wrappers.py
